2000-10-31 Johannes Zellner <johannes@zellner.org>

	* src/gplt_x11.c: moved current_gc outside the #ifdef PM3D
	block, so it is also defined, if compiling w/o PM3d support.

2000-10-31 Johannes Zellner <johannes@zellner.org>

	* merged the pm3d branch to MAIN
	* docs/gnuplot.doc: added GGI/win to the list of pm3d capable terminals

2000-10-31 Johannes Zellner <johannes@zellner.org>

	* src/save.c: set linestyle --> set style line

2000-10-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (gen_tics): pass NULL to callback for minitics, not "".
	Fixes bug observed by J.R. van Zandt today.

	* src/graphics.c (widest2d_callback): do nothing if 'text' argument
	was NULL. 

2000-10-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/pstricks.trm (PSTRICKS_xscale): removed, as it was
	essentially unused, anyway.
	(PSTRICKS_yscale): dito.
	(PSTRICKS_graphics): respect 'size' and 'offset' settings in
	creating the bounding box of the graph.

	* term/eepic.trm (EEPIC_lines): Added a few more linetypes which
 	had been blissfully commented out.
	(EEPIC_NUMLINES): raised to 10, accordingly.
	(EEPIC_graphics): respect 'size' and 'offset' settings in creating
 	the bounding box of the graph. This overrides the patch of
 	2000-10-24 filed in by Lars.

2000-10-25  Petr Mikulik <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: added documentation for the "history" and 
	  "system" commands.

2000-10-25  Johannes Zellner <johannes@zellner.org>

	* src/pm3d.c, src/color.[ch]:
	repaired supplying of extended color specs in pm3d
	(make it working in vgagl.trm)

2000-10-24  Petr Mikulik <mikulik@physics.muni.cz>

	* trm/post.trm: "g" makes stroke + set(gray/rgb), "G" and "H" removed;
	  finally supporting 'with l lt pal' too

	* docs/gnuplot.doc, pm3d/README: say PM3D works under Win too

2000-10-24  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/gnuplot.texi: Regenerate to include new arrow heads options
	and driver updates.
